--- a/pixelcc/index.html
+++ b/pixelcc/index.html
@@ -125,13 +125,10 @@ Eum ūt lorem mnesarċhum, et ius inǣni siƿgulis īnvenire. His phaēðrum ini
 <div id="contact"></div>
 <div id="footerinfo">
 Email: <a title="YAY! Email, Wooo!" href="mailto:pixelcheesecake@gmail.com">pixelcheesecake@gmail.com</a></br>
+&copy;PixelCheeseCake&trade; 2012 - 2016. &nbsp; All Rights Reserved. &nbsp; <span style="font-size:x-small;">Artwork by <a href="//optical-pyro.deviantart.com" target="_blank">Optical_Pyro</a></span>
 <p align="center">&nbsp;</p>
 &diams; External Links &diams;</p>
 &#8226;&nbsp; <a title="Subscribe to our channel" href="//youtube.com/pixelcheesecake" type="button" class="buttyt" target="_blank">YouTube</a> &#8226;&nbsp; <a title="Join in on the Gaming Fun!" href="//steamcommunity.com/groups/pixelcheesecake" type="button" class="buttst" target="_blank">Steam Group</a> &#8226;&nbsp; <a title="Follow us!" href="//twitter.com/pixelcheesecake" type="button" class="butttw" target="_blank">Twitter</a> &#8226;&nbsp; <a title="Like our page!" href="//fb.me/pixelcc" type="button" class="buttfb" target="_blank">Facebook</a> &#8226;&nbsp; <a title="Reddit away!" href="//reddit.com/r/pixelcheesecake" type="button" class="buttrt" target="_blank">Subreddit</a> &#8226;&nbsp; <a title="Ask us anything!" href="//ask.fm/pixelcheesecake" type="button" class="buttaf" target="_blank">Ask FM</a> &#8226;&nbsp; 
-<p align="center">&nbsp;</p>
-&copy;PixelCheeseCake&trade; 2012 - 2016. &nbsp; All Rights Reserved.</br>
-<span style="font-size:x-small;">Artwork by <a href="//optical-pyro.deviantart.com" target="_blank">Optical_Pyro</a></span></p>
-<a rel="license" href="http://creativecommons.org/licenses/by-nc/2.5/" title="This work is licensed under a Creative Commons Attribution-NonCommercial 2.5 Generic License"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/2.5/88x31.png" /></a></div>
 </div>
 </body>
 <!-- eathuis86@gmail.com --!>
