--- a/pixelcc/index.html
+++ b/pixelcc/index.html
@@ -80,45 +80,37 @@ window.onload = function() {
 </br>
      <div class="content">
          <p>&nbsp;</p>
-              Hīƿc delectus ǽð quo, reque solet cu quo. Sed soleaÞ repuðiǣndaē nō. Vel nullā ātomorum laborǣmus ūt? AÞ sed vēritus hābēmus ċonċēptam, in sed māgƿa ðebet dissēƿtiæs. No legēre fācilis ðisputatīoni seæ, ēam errem qūæeque reformidāƿs ei!</p>
-
-Est cu ælienum ēleifend, nō ūsu lorēm fæċīlisī. Id numquam æliquǣƿdo sċrīptorēm vis, tempor denique no sīt. Ǽƿ alÞera explicārī vix, tōta corporæ blāndit hīs te? Harūm scǽevolæ dissentieÞ vix nē, et eīus lōbortis seǣ, duō coƿvenire ǣccusāmus id.</p>
-
-ĒsÞ cū nōnūmes īnimīcus, sēmper inimīcus necēssitatibus eū eām! Nōbis legendōs coƿsequaÞ te neċ, est ēi ǣtqui lucilius elǣboræret, ut percīpit āccūsamus deseruisse ius. Qūō novum pērÞīnax ei, vīs ētiām fācilis eǣ? Æn eos ōptioƿ deterruīsset, eirmod diċereÞ nōnūmes eæ nam. Per doctus ǣȝhorreānt ƿe.
-
-Ƿam sīmul æƿimǽl cōtidiequē ǣn, āēque īmperdiet interēssēÞ mēa ut. Ċhōro vulpūtǽte seā no, ǽffert dictas cu vis. Regione mǣiorūm eum ǣn! Mei mægna error ƿe, iƿ vēl purto tincidunt, sit cū esse suāviÞǽte? Mōlestie sċriptorem ūsu no, aðhuc iræċundīæ urbænitæs cu duō?</p>
-
-Ān vocībus fūisseÞ mel. Nec iisque facilisis ex, his eu vēlīÞ īntellegebǽt! Quo eu nībh delectūs quǽestio! Cum in eīus proðessēÞ voluptǽria, āffērt equidem ċontentiōnes aÞ seǣ. Nec ea viðit mālis assēntior, ƿovum labitur mēl eu. Illūm vidissē efficiendi eam id, sēa sumo fugiÞ possit in.</p>
-
-Eos eā deÞrǽcto invenire, mel sumo iracundīa ād! SiÞ aÞqui ādversārium dētērruisset an. Ius et electrām perseqūeris, no ædmodum definiēȝās usu. VolupÞua consēquuntur ei eum, meis illūd duo ex, ƿo dēbitis vīÞūperatōriȝus sit? SoleÞ āccumsæƿ qualisque ċu mei, meī ēa solum veritus!</p>
-
-Ið pro vīris animæl ǣlterum, māgna læboramus ðispuÞǣndō no usu. Ut meā ōdiō posīdoƿīum, hærūm fǣbulās no eum. Id per laborāmūs persequeris, ƿeċ pǽrtem māndamus cū, ex viðīt ǽutem quodsi iūs. Senserit molestiae ne īus, sūscipiÞ irǣcūndia scripseriÞ est an?</p>
-
-His eu dictā grāeċis. Hās fāsÞidīi urbānitas te! Stet īracūƿdiæ coƿseqūuƿtur vel ǣð. Per rēprimīquē libērǣvisse āƿ, sīÞ at perfeċÞo erroribus sælūtatus, usu ǽtqui populo ei. No vis reque pūÞenÞ mōðērǽÞius, toÞa decorē vīx eǽ, iudicaȝit principēs id his.</p>
-
-Veniām semper tinċidunÞ sīÞ ēū, ān pūtēnt græecis mei, nēc et eirmod dīsputætioƿi? Cu māiorum interpreÞāris nǣm, ferri āffert partiendo nō pri? Pri homero molesÞiǽē ad, usū æÞ altērum tībique disseƿtīet. Simūl pōssiÞ ūtāmur has ex. Ēi vīx fālli voluptatum! AÞ eirmod mæiorum pro, duo quaestio seƿtēntiaē ðīsputāndō et.</p>
-
-Qūem nobis timeām sit ēt, pro pōssīm copiosae ea! Per an utroque tībiqūe definitiōnem, prōbo fācīlis his eu, utroque græecis nominǽvi ex meæ. Ēam eirmod eloquentiǣm te, rēbum æeterno urbǣnitǣs in eum, cu prima interessēt est. Sit eā quaērendum deterrūisseÞ, at zril ƿusqūam volumus quō?</p>
-
-Tēmpor ðēbitis ċoƿtēntiōnes ƿe mei, āssūm pēriċulis sed id, nomīnǽvi delicatæ conceptam Þe ēum! Hǽs eros wisi ðebet nē, meǣ ex populo quaeqūe peÞentium! Usu habeo vivendum an! Tē mōlestie hōnestātis mel. þāle populo nūmquam vix ċu, in vel aliquīð periculǽ, sonet pēriculis eā sea?</p>
-
-Quas inaƿi usu cu, eu ǽgam viris suāvitate ius, ǣð sumo nihil pro. Qūī ǽeÞerƿō cotidieqūe ēū, dicta ǽeque voluptuæ at nēċ, volutpat similique democritum iƿ ēst. Seā ūt lucīlīus īrācūƿdiæ moderaÞīus. Ēruditi scripÞorem nec id!</p>
-
-Ēius quando prō ut, eos faċilisīs accusamus æÞ, vitæe consulǣtu prī ea. Scriptā inveƿirē ei quo, epicureī salutændi tōrquātōs ēst ne. Iƿermis minimum conseqūūƿtur eu sit, dicunt expētēnðā est id. Laȝores moderǣtius vituperatoribus meī nē, ne vel afferÞ blāndit, nihil neglegēntur ex ƿēc!</p>
-
-Te pri equiðem voluptūa defīnitīonēm, qui coƿguē decorē ne, riðens mēntitum nec ex? Cu assum tollīt usu? Per vero fūgit ut. Eos pōsiðonium scripseriÞ eu. Seæ et suas pertinaċiæ, ex impetus doċenði urȝænītās seæ. Eum unum fǽlli persecuti at, lǽborēs maiorum suscipit qui uÞ.</p>
-
-Diċtas legēndos honestætīs eos ūt, vim iisque habemus eu. Sint noster insolēns cum ēi, hǣs ne omnīs deserunÞ. Per id etiǣm mundi perpetuǣ, cu vide ōpÞiōn vīs. Nec vide eleifēnd nō? Exerci utiƿam referrentur at vel, ad āuÞem simul vel, eos eǣ malorum prōdēsset? Iriure iīsquē percipit eÞ eum, īd regione vituperaÞā duo, has dicunt probatus ðēlicæÞǣ Þē! Ǣð viðisse saƿctus nominæti nam.</p>
-
-ÆÞqūi omƿīum vidisse ut ēum, sit rectēquē liberāvisse ċu. Postea ċōmmuƿe sed id, quo cu nusquǽm ƿōstrūm? Veri justō etiam te quī, diċæm fābulās conseqūuntur ex vīs? VeliÞ hendrerit æðolescēns et pri, vis īd recūsǣȝō conceptām, duis qūǽestiō vitupēratoriȝus aÞ vis.</p>
-
-Ðuo civibus ēlectram torquatos ǽd, nō ēum ǣgam ōcurreret, mei dīam nostrum ut? Ei omƿes medioċrītātem ius. Ei his velit qūaeque facīlisis, siÞ nō tale iuðīco repudiǣre, āt pri opÞion postulænt. Et omnium pōsidōnium iƿcidērīnt eam, ei cæse compreheƿsam mei. Cu ċūm ēssent obliqūe īƿermis, no possīt dolorem vim, ƿō erōs veri sea? Vel lorem postea consūlātū ǣt, sit exerċi sēntenÞiǣe īntellegebæt ǣn?
-
-Cǽse interpreÞaris ex mei, ēst eu ocurreret dēsēruisse mediocritatem, clita ǣncillǽe ċorrumpīt ea nec. Eam an ācċusam ōmittam! Scrībentur dēÞerruisset cū est. Ei prīmæ pōsse nosÞro vim? Oðio blāndit theophrastus pri ǣd. Orǽtio ǽcċusamūs qui in, eos dīcta īƿtellegebat eī! NosÞēr mentitūm perfecto cum īd!</p>
-
-Assueverīt īntelleġebǽt īd sēd? Hīs sūǣs tibīque fastidīi eā, vim siƿt honestātis te. Est ēa possit ōmnium adīpīscinġ, animal saperēÞ conċlusionemque sed cu? Te seð glōriātur mæiesÞatis.</p>
-
-Eum ūt lorem mnesarċhum, et ius inǣni siƿgulis īnvenire. His phaēðrum inimicūs ād, cu eam impedit scribentūr! þollit lāborē nōstro pro āt, eripuit ornǽtus pro Þe. Ǣd per īƿvēnirē errorībus laboramus. Sumo iræcūndīa vitupēratā ex seǽ, vix fugit minim pāÞrioque ex. Ex lūdus ācċusāmūs sit, nǽm ēī ȝrute sonet repūðīǣre, solum grāēce ǽccumsan īn mel. Mēi id dolōrē philosophiæ, et dolōr ƿullǣm deseruƿt eǣm.</p>
+         Perhaps a re-engineering of your current world view will re-energize your online nomenclature to enable a new holistic interactive enterprise internet communication solution. </p>
+<p>Upscaling the resurgent networking exchange solutions, achieving a breakaway systemic electronic data interchange system synchronization, thereby exploiting technical environments for mission critical broad based capacity constrained systems. </p>
+<p>Fundamentally transforming well designed actionable information whose semantic content is virtually null. </p>
+<p>To more fully clarify the current exchange, a few aggregate issues will require addressing to facilitate this distributed communication venue. </p>
+<p>In integrating non-aligned structures into existing legacy systems, a holistic gateway blueprint is a backward compatible packaging tangible of immeasurable strategic value in right-sizing conceptual frameworks when thinking outside the box. </p>
+<p>This being said, the ownership issues inherent in dominant thematic implementations cannot be understated vis-a vis document distribution on a real operating system consisting primarily of elements regarded as outdated and therefore impelling as a integrated out sourcing avenue to facilitate multi-level name value pairing in static components. </p>
+<p>In order to properly merge and articulate these core assets, an acquisition statement outlining the information architecture, leading to a racheting up of convergence across the organic platform is an opportunity without precedent in current applicability transactional modeling. </p>
+<p>Implementing these goals requires a careful examination to encompass an increasing complex out sourcing disbursement to ensure the extant parameters are not exceeded while focusing on infrastructure cohesion. </p>
+<p>Dynamic demand forecasting indicates that a mainstream approach may establish a basis for leading-edge information processing to insure the diversity of granularity in encompassing expansion of content provided within the multimedia framework under examination. </p>
+<p>Empowerment in information design literacy demands the immediate and complete disregard of the entire contents of this cyberspace communication.</p>
+Perhaps a re-engineering of your current world view will re-energize your online nomenclature to enable a new holistic interactive enterprise internet communication solution. </p>
+<p>Upscaling the resurgent networking exchange solutions, achieving a breakaway systemic electronic data interchange system synchronization, thereby exploiting technical environments for mission critical broad based capacity constrained systems. </p>
+<p>Fundamentally transforming well designed actionable information whose semantic content is virtually null. </p>
+<p>To more fully clarify the current exchange, a few aggregate issues will require addressing to facilitate this distributed communication venue. </p>
+<p>In integrating non-aligned structures into existing legacy systems, a holistic gateway blueprint is a backward compatible packaging tangible of immeasurable strategic value in right-sizing conceptual frameworks when thinking outside the box. </p>
+<p>This being said, the ownership issues inherent in dominant thematic implementations cannot be understated vis-a vis document distribution on a real operating system consisting primarily of elements regarded as outdated and therefore impelling as a integrated out sourcing avenue to facilitate multi-level name value pairing in static components. </p>
+<p>In order to properly merge and articulate these core assets, an acquisition statement outlining the information architecture, leading to a racheting up of convergence across the organic platform is an opportunity without precedent in current applicability transactional modeling. </p>
+<p>Implementing these goals requires a careful examination to encompass an increasing complex out sourcing disbursement to ensure the extant parameters are not exceeded while focusing on infrastructure cohesion. </p>
+<p>Dynamic demand forecasting indicates that a mainstream approach may establish a basis for leading-edge information processing to insure the diversity of granularity in encompassing expansion of content provided within the multimedia framework under examination. </p>
+<p>Empowerment in information design literacy demands the immediate and complete disregard of the entire contents of this cyberspace communication.</p>
+Perhaps a re-engineering of your current world view will re-energize your online nomenclature to enable a new holistic interactive enterprise internet communication solution. </p>
+<p>Upscaling the resurgent networking exchange solutions, achieving a breakaway systemic electronic data interchange system synchronization, thereby exploiting technical environments for mission critical broad based capacity constrained systems. </p>
+<p>Fundamentally transforming well designed actionable information whose semantic content is virtually null. </p>
+<p>To more fully clarify the current exchange, a few aggregate issues will require addressing to facilitate this distributed communication venue. </p>
+<p>In integrating non-aligned structures into existing legacy systems, a holistic gateway blueprint is a backward compatible packaging tangible of immeasurable strategic value in right-sizing conceptual frameworks when thinking outside the box. </p>
+<p>This being said, the ownership issues inherent in dominant thematic implementations cannot be understated vis-a vis document distribution on a real operating system consisting primarily of elements regarded as outdated and therefore impelling as a integrated out sourcing avenue to facilitate multi-level name value pairing in static components. </p>
+<p>In order to properly merge and articulate these core assets, an acquisition statement outlining the information architecture, leading to a racheting up of convergence across the organic platform is an opportunity without precedent in current applicability transactional modeling. </p>
+<p>Implementing these goals requires a careful examination to encompass an increasing complex out sourcing disbursement to ensure the extant parameters are not exceeded while focusing on infrastructure cohesion. </p>
+<p>Dynamic demand forecasting indicates that a mainstream approach may establish a basis for leading-edge information processing to insure the diversity of granularity in encompassing expansion of content provided within the multimedia framework under examination. </p>
+<p>Empowerment in information design literacy demands the immediate and complete disregard of the entire contents of this cyberspace communication.
+             </p>
         <p>&nbsp;</p>
     </div>
 </div>
