Closed the anchor tag.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ there repective authors and cannot be used unless stated otherwise.</p>
 <p align="center">&nbsp;</p>
 </center></div>
 <p align="center">&nbsp;</p>
-<p style="font-family: 'BenchNine', sans-serif;" align="center">&copy; 2014 - 2016 &middot; <a title="my favourite site" href="http://hasthelargehadroncolliderdestroyedtheworldyet.com/" target="_blank"/>Site</p>
+<p style="font-family: 'BenchNine', sans-serif;" align="center">&copy; 2014 - 2016 &middot; <a title="my favourite site" href="http://hasthelargehadroncolliderdestroyedtheworldyet.com/" target="_blank">Site</a></p>
 <p align="center">&nbsp;</p>
 </body>
 </html>
