--- a/unicorns.html
+++ b/unicorns.html
@@ -17,7 +17,7 @@
                 </marquee>
                 </marquee>
                </div> 
-               <p style="font-family: 'Karla', sans-serif;" align="center">For my beautiful Hollyetta, to help you feel better! &hearts; &nbsp;
+               <p style="font-family: 'Karla', sans-serif;" align="center">For my beautiful Holly - to help you feel better! &hearts; &nbsp;
                Made with &hearts; by <strong>Josh</strong> &diams;</br>
                &nbsp; <a href="/">Home</a></body>
 </html>
