--- a/plotclan.html
+++ b/plotclan.html
@@ -7,6 +7,6 @@
     </style>
   </head>
   <body>
-    <span align="centre" style="font-family: 'Oswald', sans-serif;">/plot clan</span>
+    <span align="center" style="font-family: 'Oswald', sans-serif;">/plot clan</span>
   </body>
 </html>
