--- a/plotclan.html
+++ b/plotclan.html
@@ -7,6 +7,7 @@
     </style>
   </head>
   <body>
-    <span align="center" style="font-family: 'Oswald', sans-serif;">/plot clan</span>
+    <p align="center">&nbsp;</p>
+    <span style="font-family: 'Oswald', sans-serif;">/plot clan</span>
   </body>
 </html>
