--- a/plotclan.html
+++ b/plotclan.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <p align="center">&nbsp;</p>
-    <span style="font-family: 'Oswald', sans-serif;">/plot clan</span>
+    <span style="font-family: 'Oswald', sans-serif;" align="center">/plot clan</span>
   </body>
 </html>
