--- a/index.html
+++ b/index.html
@@ -1,31 +1,38 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <link rel='shortcut icon' href="/favicon.ico" type="image/x-icon" />
-   <meta name="author" content="Josh 'Eathuis' Wilson">
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <title>Josh Wilson's Online Résumé</title>
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-   <link type="text/css" rel="stylesheet" href="/stylesheet.css">
-</head>
-   <body>
-     <div id="header">
-         <div id="header-text" style="font-weight:bold;">Cinnamon Sporks and <span class="rainbow">Unicorn</span> Horns.</span></br> 
-     <a type="button" class="btn" href="#">Home</a>&nbsp;<a type="button" class="btn" href="/pixelcc">PixelCC</a>&nbsp;<a type="button" class="btn" href="/unicorns">Unicorns</a></div>
-     </div>
-   <div id="page-wrap">
-<center>
-<p align="center">&nbsp;</p>
-Dev Log on recent changes:</br>
-Documentation pertaining to such events of my internet presense will make their home here, all said documentation is owned by 
-there repective authors and cannot be used unless stated otherwise.</p>
-<p align="center">&nbsp;</p>
-</center></div>
-<p align="center">&nbsp;</p>
-<p style="font-family: 'BenchNine', sans-serif;" align="center">&copy; 2014 - 2016 &middot; <a title="my favourite site" href="http://hasthelargehadroncolliderdestroyedtheworldyet.com/" target="_blank">Site</a></p>
-<p align="center">&nbsp;</p>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="author" content="https://github.com/Jo54">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel='shortcut icon' href="/favicon.ico" type="image/x-icon" />
+    <title>Home</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link type="text/css" rel="stylesheet" href="/stylesheet.css">
+  </head>
+   
+  <body>
+    <div id="header">
+      <div id="header-text" style="font-weight:bold;">Cinnamon Sporks and <span class="rainbow">Unicorn</span> Horns.</span></br> 
+      <a type="button" class="btn" href="#">Home</a>&nbsp;<a type="button" class="btn" href="/pixelcc">PixelCC</a>&nbsp;<a type="button" class="btn" href="/unicorns">Unicorns</a></div>
+    </div>
+
+    <div id="page-wrap">
+      <center>
+
+        <p align="center">&nbsp;</p>
+
+          Dev Log on recent changes:</br>
+          Documentation pertaining to such events of my internet presense will make their home here, all said documentation is owned by there repective authors and cannot be used unless stated otherwise.</p>
+        <p align="center">&nbsp;</p>
+      </center>
+    </div>
+
+    <p align="center">&nbsp;</p>
+    
+    <p style="font-family: 'BenchNine', sans-serif;" align="center">&copy; 2014 - 2016 &middot; <a title="my favourite site" href="http://hasthelargehadroncolliderdestroyedtheworldyet.com/" target="_blank">Site</a></p>
+  
+    <p align="center">&nbsp;</p>
+  </body>
 </html>
