--- a/pixelcc/index.html
+++ b/pixelcc/index.html
@@ -18,7 +18,7 @@ __________.__              .__  _________ .__                                   
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>PixelCheeseCake</title>
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-   <link rel="stylesheet" type="text/css" href="//eathuis.github.io/pixelcc/css/stylesheet.css">
+   <link rel="stylesheet" type="text/css" href="//jo54.github.io/pixelcc/css/stylesheet.css">
    <script src="//eathuis.github.io/pixelcc/pixelcc.js"></script>
    <script src="//eathuis.github.io/pixelcc/twitter.js"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
